[package]
name = "watchlichesstv"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.145", features	= ["derive"] }
serde_json = "1.0.8"
curl = "0.4.44"
notcurses = "3.1.0"
libnotcurses-sys = { version = "3.7.0", features = ["compile_csource", "vendor_csource"] }
fen = "0.1.0"
rand = "0.8.5"
unicode-segmentation = "1.10.0"